# kth

./: .travis.yml  Cargo.toml  README.md
benches/: kth.rs  kth_cmp.rs
ci-config/: travis-doc-upload-key.enc  travis-doc-upload.cfg
src/: fr.rs  lib.rs  old.rs  quickselect.rs
test/: slice.rs
tests/: big.rs  slice.rs
